Revert removal of OTAUpdate CI run

--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -88,6 +88,7 @@ jobs:
               fqbn: "arduino:renesas_uno:unor4wifi"
             additional-sketch-paths: |
               - libraries/WiFiS3
+              - libraries/OTAUpdate
           - board:
               fqbn: "arduino-git:renesas:unor4wifi"
             additional-sketch-paths: |
