--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -95,6 +95,7 @@ jobs:
               - libraries/WiFiS3
               - libraries/OTAUpdate
               - libraries/OPAMP
+              - libraries/Preferences
           - board:
               fqbn: "arduino-git:renesas:minima"
             additional-sketch-paths: |
