Update Project files.

--- a/extras/e2studioProjects/SparkFun_ThingPlus_RA6M5/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
+++ b/extras/e2studioProjects/SparkFun_ThingPlus_RA6M5/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
@@ -30,8 +30,6 @@ Renesas\#\#HAL\ Drivers\#\#all\#\#r_elc\#\#\#\#4.0.0/all=2978087792,ra/fsp/inc/a
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_elc\#\#\#\#4.0.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_flash_hp\#\#\#\#4.0.0/all=1976517121,ra/fsp/inc/api/r_flash_api.h|915802890,ra/fsp/inc/api/r_cgc_api.h|2876379499,ra/fsp/inc/instances/r_flash_hp.h|842716288,ra/fsp/src/r_flash_hp/r_flash_hp.c
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_flash_hp\#\#\#\#4.0.0/libraries=
-Renesas\#\#HAL\ Drivers\#\#all\#\#r_gpt\#\#\#\#4.0.0/all=1385984689,ra/fsp/inc/api/r_timer_api.h|1101069320,ra/fsp/inc/instances/r_gpt.h|3417329805,ra/fsp/src/r_gpt/r_gpt.c
-Renesas\#\#HAL\ Drivers\#\#all\#\#r_gpt\#\#\#\#4.0.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_icu\#\#\#\#4.0.0/all=1002305543,ra/fsp/inc/api/r_external_irq_api.h|1175293790,ra/fsp/inc/instances/r_icu.h|1806776990,ra/fsp/src/r_icu/r_icu.c
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_icu\#\#\#\#4.0.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_iic_master\#\#\#\#4.0.0/all=1587407673,ra/fsp/inc/api/r_i2c_master_api.h|2978087792,ra/fsp/inc/api/r_elc_api.h|2970687511,ra/fsp/inc/api/r_transfer_api.h|1116392784,ra/fsp/inc/instances/r_iic_master.h|1163980116,ra/fsp/src/r_iic_master/r_iic_master.c
@@ -68,4 +66,6 @@ Renesas\#\#HAL\ Drivers\#\#all\#\#r_usb_pcdc\#\#\#\#4.0.0/all=2298650489,ra/fsp/
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_usb_pcdc\#\#\#\#4.0.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_wdt\#\#\#\#4.0.0/all=2639470834,ra/fsp/inc/api/r_wdt_api.h|3549284757,ra/fsp/inc/instances/r_wdt.h|3424779918,ra/fsp/src/r_wdt/r_wdt.c
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_wdt\#\#\#\#4.0.0/libraries=
+Renesas\#\#Middleware\#\#all\#\#r_ble_gtl\#\#\#\#0.0.1+fsp.5.1.0/all=121839025,ra/renesas/wireless/da14xxx/r_ble_gtl/r_ble_gtl_image.h|100214846,ra/renesas/wireless/da14xxx/r_ble_gtl/r_ble_gtl.c|1989691555,ra/renesas/wireless/da14xxx/r_ble_gtl/r_ble_gtl.h|2619281316,ra/renesas/wireless/da14xxx/r_ble_gtl/r_ble_gtl_image.c
+Renesas\#\#Middleware\#\#all\#\#r_ble_gtl\#\#\#\#0.0.1+fsp.5.1.0/libraries=
 eclipse.preferences.version=1
