--- a/libraries/SFU/library.properties
+++ b/libraries/SFU/library.properties
@@ -5,5 +5,5 @@ maintainer=Arduino <info@arduino.cc>
 sentence=Second stage bootloader for Portenta C33
 paragraph=
 category=Other
-url=https://www.arduino.cc/en/Reference/SFU
+url=https://github.com/arduino/ArduinoCore-renesas/tree/main/libraries/SFU
 architectures=renesas_portenta,renesas
