--- a/libraries/WiFiS3/library.properties
+++ b/libraries/WiFiS3/library.properties
@@ -5,6 +5,6 @@ maintainer=Arduino <info@arduino.cc>
 sentence=Enables network connection (local and Internet) with the Arduino Leven.
 paragraph=With this library you can instantiate Servers, Clients and send/receive UDP packets through WiFi. The board can connect either to open or encrypted networks (WEP, WPA). The IP address can be assigned statically or through a DHCP. The library can also manage DNS.
 category=Communication
-url=http://www.arduino.cc/en/Reference/WiFiS3
+url=https://docs.arduino.cc/tutorials/uno-r4-wifi/wifi-examples/
 architectures=renesas,renesas_uno
 includes=WiFiS3.h
