Remove CI warning by removing set-output command

--- a/.github/workflows/compile-examples.yml
+++ b/.github/workflows/compile-examples.yml
@@ -133,7 +133,7 @@ jobs:
       - name: Check if API should be compiled in the core
         id: checkapi
         run: |
-          if [[ $(grep -r api platform.txt) ]]; then echo "::set-output name=IS_API::true"; fi
+          if [[ $(grep -r api platform.txt) ]]; then echo "IS_API=true" >> $GITHUB_OUTPUT; fi
 
       - name: Install ArduinoCore-API
         run: rm "$GITHUB_WORKSPACE/cores/arduino/api" && mv "$GITHUB_WORKSPACE/extras/ArduinoCore-API/api" "$GITHUB_WORKSPACE/cores/arduino"
